--- a/First CSS.css
+++ b/First CSS.css
@@ -9,26 +9,32 @@ selector{
     We are changing the background and text color
     */
 body{
-background-color: rgb(100, 0, 139);
+background-color: rgb(98, 80, 105);
 }
 /* Changes the font used for this pages heading */
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    color: rgba(0, 255, 115, 0.589);
+    color: rgba(230, 166, 18, 0.751);
 }
-
-nav{
-    height: 60px;
+ul, li{
+    font-family: 'Times New Roman', Times, serif;
+}
+/*nav{
+   height: 60px;
     width: 200px;
-    float: left;
+    float: right;
     padding: 5px;
     line-height: 30px;
+}*/
+    
+main{
+    float: center ;
 }
 footer{
     position: fixed;
     bottom: 0;
     left: 50%;
-    text-align: center;
+    text-align: left;
 }
 /* custom selector that only affects what is specified before the braces  */
 #memeimage{
@@ -47,3 +53,57 @@ a{
     text-decoration: none;
     color: blueviolet;
 }
+
+/* table styles */
+table{
+    width: 100%;
+    /* prevents statcked border lines */
+     border-collapse: collapse;
+} 
+th, td{
+      border: 1px solid rgb(255, 255, 255);
+      text-align: left;
+      padding: 8px;
+      
+}
+
+th{
+    background-color: aquamarine;
+}
+
+tr :hover{
+    background-color: blueviolet;
+}
+
+/* menu style */
+        /* set the style of nav and ul */
+        nav ul{
+            list-style: none;
+            padding: 0;
+            margin: 0;
+          }
+  
+          nav ul li{
+              margin-bottom: 10px;
+              text-align: center;
+              display: inline;
+          }
+  
+          nav ul li a {
+              text-decoration: none;
+              background-color: brown;
+              color: bisque;
+              font-size: 18px;
+              padding: 10px 20px;
+              border-radius: 5px;
+              transition: background-color 0.3 ease;
+              display: inline;
+          }
+  
+          nav ul li a:hover{
+              background-color: rgb(83, 112, 243);
+          }
+  
+          nav ul li a:active{
+              background-color: blueviolet;
+          }
